k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emk-frontend
  namespace: frontend
spec:
  selector:
    app: emk-frontend
  ports:
    - port: 80
      targetPort: 80
